# Sortify

./: .gitattributes  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  requirements.txt  tailwind.config.js
public/: file.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/python_scripts/organize_model/: Organize_Folder.py  extractions.py  text_predict.py
src-tauri/src/: lib.rs
src-tauri/src/ai_handling/: mod.rs  organize_model.rs
src-tauri/src/ai_scripts/: organize_model.rs
src/app/: globals.css  layout.jsx  page.jsx
src/app/dashboard/: Dashboard.css  page.jsx
src/app/extraTools/: extraToolsCss.css  page.jsx
src/components/component/: folder-browser-dialog.jsx  sidebar.jsx  upperbar.jsx  upperbarcss.css
src/components/component/utils/: 13.js  data-loader.js  drag-drop-handlers.jsx  f.js  file-components.jsx  folder-browser-utils.js  folder-components.jsx  performance-utils.jsx  selection-handlers.jsx
src/components/component/utils/settings/: ThemeToggle.jsx
src/components/providers/: ThemeProvider.jsx
src/components/ui/: card.tsx  toast.jsx  toaster.jsx
src/components/ui/icons/: file_icons.jsx
src/hooks/: use-toast.js
